Resolve "Calcul agrégation indicateurs Green"